# LearningShaders

./: .gitignore  CMakeLists.txt  README.md  fragment.glsl  main.cpp  myshader.glsl  render.py  test.glsl  vertex.glsl
